# MiMCGe

./: Cargo.toml  README.md  block-efficiency.sh  exponent-efficiency.sh  generate-numbers.sh  parallel-dieharder.sh  run-bit-stream.sh
report/: main.tex  name.tex
report/Resources/: DecTimeBlock.tex  DiffusionConfusionx16.tex  DiffusionConfusionx24.tex  DiffusionConfusionx3.tex  DiffusionConfusionx5.tex  EncTimeBlock.tex  EncTimeExponent.tex  EncTimeExponentLog.tex  RoundNumberBlock.tex  RoundNumberExponent.tex  RoundNumberExponentLog.tex  UoBLab1.cls
scripts/: block-efficiency.sh  diffusion-confusion.sh  generate-number-list.sh  parallel-dieharder.sh  run-bit-stream.sh
src/: main.rs
src/aes/: aes.rs
src/experiments/: helpers.rs  mod.rs  tests.rs
src/mimc/: mimc.rs
src/mimc_5/: mimc_5.rs  mod.rs
src/mimc_general/: mimc_general.rs  mod.rs
src/mimc_lib/: mimc_lib.rs  mod.rs
src/tests/: helpers.rs  mod.rs  test_associativity.rs  test_commutativity.rs  test_general.rs  test_multiplication.rs  tests.rs
src/utils/: helpers.rs  mod.rs  test_addition.rs  test_distributivity.rs  test_multiplication.rs  tests.rs
test-suite-results/: Dieharderx16Results.txt  Dieharderx24Results.txt  Dieharderx3Results.txt  Dieharderx5Results.txt  NISTx16FinalAnalysisReport.txt  NISTx24FinalAnalysisReport.txt  NISTx3FinalAnalysisReport.txt  NISTx5FinalAnalysisReport.txt  big_test_16_result.txt  big_test_24_result.txt  big_test_3_result.txt  big_test_5_result.txt
tests/: cli.rs
