[package]
name = "mimc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
g2p = "1.0.1"
rand = { version = "0.8.5", features = [] }
lazy_static = "1.4.0"
aes = "0.8.3"

# For running optimized code
#[profile.dev]
#opt-level = 3
