[package]
name = "mimcge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
g2p = "1.0.1"
rand = { version = "0.8.5", features = [] }
lazy_static = "1.4.0"
aes = "0.8.3"
clap = { version = "4.5.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
